refresh handler 구현
